--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,13 @@
 .btn-prm:hover{
   background: #33a6cc;
 }
-
+button:disabled,
+button[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+  pointer-events: none;
+}
 .btn-in{
   background: #f0ad4e;
   color: #ffffff;
